# log-sentinel

./: .gitignore  README.md  pyproject.toml
log_sentinel/: __init__.py  cli.py  engine.py  models.py
log_sentinel/detectors/: __init__.py  failed_logins.py  privilege_escalation.py  suspicious_agents.py
log_sentinel/parsers/: __init__.py  apache.py  auth_log.py  base.py  windows_event.py
log_sentinel/reporters/: __init__.py  console.py  exporters.py
tests/: test_parsers.py
tests/fixtures/: windows_events.xml
